components/prescription/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescription
  labels:
    app: prescription
    app.kubernetes.io/component: prescription
    app.kubernetes.io/instance: prescription
    app.kubernetes.io/name: prescription
    app.kubernetes.io/part-of: sasya-arogya
    app.openshift.io/runtime: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prescription
  template:
    metadata:
      labels:
        app: prescription
        app.kubernetes.io/component: prescription
        app.kubernetes.io/name: prescription
        deployment: prescription
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: prescription
          image: quay.io/rajivranjan/prescription:amd64-v1.3
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 360
            periodSeconds: 60
            timeoutSeconds: 15
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 15
            failureThreshold: 10
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
