components/prescription/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prescription
  labels:
    app: prescription
    app.kubernetes.io/component: prescription
    app.kubernetes.io/instance: prescription
    app.kubernetes.io/name: prescription
    app.kubernetes.io/part-of: sasya-arogya
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: prescription
    weight: 100
  wildcardPolicy: None
